--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "@angular/router": "^16.0.0",
     "@fullcalendar/angular": "^6.1.9",
     "@fullcalendar/core": "^6.1.9",
+    "bootstrap": "^5.3.2",
+    "font-awesome": "^4.7.0",
     "fullcalendar": "^6.1.9",
+    "ngx-bootstrap": "^11.0.2",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
