--- a/angular.json
+++ b/angular.json
@@ -66,11 +66,13 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "Calendario:build:production"
+              "browserTarget": "Calendario:build:production",
+              "proxyConfig": "src/proxi.config.json"
             },
             "development": {
               "browserTarget": "Calendario:build:development"
             }
+            
           },
           "defaultConfiguration": "development"
         },
