--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.4.1",
+    "push.js": "^1.0.12",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
